--- a/StorhaugenWebsite/Pages/Login.razor
+++ b/StorhaugenWebsite/Pages/Login.razor
@@ -11,7 +11,7 @@
         </div>
 
         <h1 class="login-title">Storhaugen Eats</h1>
-        <p class="login-subtitle">Rate and track family dinners together</p>
+        <p class="login-subtitle">Storhaugen eksklusiv</p>
 
         @if (!string.IsNullOrEmpty(_errorMessage))
         {
@@ -47,9 +47,6 @@
                     </div>
                 }
             </div>
-            <MudText Typo="Typo.caption" Color="Color.Secondary">
-                Only family members can access this app
-            </MudText>
         </div>
     </div>
 </div>
