--- a/StorhaugenWebsite/Pages/FoodDetails.razor
+++ b/StorhaugenWebsite/Pages/FoodDetails.razor
@@ -5,22 +5,7 @@
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
 
-@if (!AuthService.IsAuthorized)
-{
-    <div class="login-container">
-        <div class="empty-state">
-            <div class="empty-state-icon">
-                <MudIcon Icon="@Icons.Material.Rounded.Lock" Size="Size.Large" />
-            </div>
-            <h2 class="empty-state-title">Please sign in</h2>
-            <p class="empty-state-text">You need to be signed in to view meals</p>
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="login" Size="Size.Large">
-                Go to Login
-            </MudButton>
-        </div>
-    </div>
-}
-else if (_isLoading)
+@if (_isLoading)
 {
     <div class="d-flex flex-column gap-3">
         <div class="skeleton-card">
